[package]
name = "dt_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
#
[dependencies]
delay_timer = "0.10.0"
tokio = { version = "^1.3.0", features = ["full"] }
anyhow = "^1.0.31"
smol = "^1.2.5"
config = "0.9"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
log4rs = { version = "*", features = ["gzip"] }
log = "*"
chrono = "*"
async-std = { version = "*", features = ["attributes"]}


